#
# NEWS for R package bigmemory
#
# See also the Bigmemory Project:
# 	http://www.bigmemory.org
#	Jay and Mike <bigmemoryauthors@bigmemory.org>
#
# Jay Emerson <john.emerson@yale.edu>
# Mike Kane <michael.kane@yale.edu>
# Charles Determan <cdetermanjr@gmail.com>

2017-11-08 Michael Kane
* Memory leak problem solved.

2016-09-21 Adam Ryczkowski <adam@statystyka.net> 
* Fixed a bug with handling raw bytes. Now it is possible to
  use big.matrix to store arbitrary R object (using serialization).
  If you want to make sure that bigmemory big.matrix handles raw
  data, add "bigmemory (>=4.5.21)" to the Depends stanza in 
  the Description.
  
2014-04-15 Mike and Charles <bigmemoryauthors@bigmemory.org>
* Enabled use of Rcpp package to simply code and create
  smaller barrier to adding additional extensions.
* Added new method to big.matrix objects, allocation_size, to
  easily check the size of the object in memory.
* Float type matrices have now been added to enable single
  precision analytics.

2013-03-09	Jay and Mike <bigmemoryauthors@bigmemory.org>

* We missed a NEWS entry.  Windows support is temporarily suspended
  due to issues with the Boost headers.
* We now depend on bigmemory.sri (a trivial dependency relating to
  our big.matrix descriptors) and new package BH (for Boost headers).

2011-06-29	Jay and Mike <bigmemoryauthors@bigmemory.org>

* Modified deepcopy() with C code (thanks to Zarrar for this)
* Added -fpermissive to possibly address a compilation issue
  in Linux
* Added -lm to address a linking problem with math.h
* Fixed a problem with reading all 0's in a column in
  read.big.matrix()
* We note that there may be an inconsistency with read.big.matrix()
  and write.big.matrix() that needs to be addressed.

2010-10-30      Jay     <bigmemoryauthors@bigmemory.org>

* Modified configure to handle a Solaris problem.
* Added definition of __C99FEATURES__ to isna.hpp; hopefully
  won't break anything.

2010-05-16	Jay	<bigmemoryauthors@bigmemory.org>
